test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_3.k
import pkg

schema Data(pkg.ErrorName):
    name: str
